# miniperscache

./: .gitignore  README.md  pyproject.toml
src/miniperscache/: __init__.py  arg_hasher.py  batched_cache.py  cache.py  logging.py  serializer.py  storage.py
src/perscache/: __init__.py  cache.py  logging.py  serializer.py  storage.py
tests/: test_arg_hasher.py  test_batched_cache.py  test_cache.py  test_dill_objects.py  test_storage.py
